force-app/main/default/objects/ffct__BundleJob__c/ffct__BundleJob__c.object-meta.xml
<CustomObject>
    <customHelpPage>ffct__bundlejobonlinehelp</customHelpPage>
    <description>Information about push and provision jobs including the connection used.</description>
    <label>Bundle Job</label>
    <nameField>
        <label>Bundle Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bundle Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>