force-app/main/default/objects/ffct__BundleJob__c/fields/ffct__Action__c.field-meta.xml
<CustomField>
    <fullName>ffct__Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Push</fullName>
                <default>true</default>
                <label>Push</label>
            </value>
            <value>
                <fullName>Provision</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>