force-app/main/default/objects/ffct__BundleJob__c/fields/ffct__Connection__c.field-meta.xml
<CustomField>
    <fullName>ffct__Connection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Connection</label>
    <referenceTo>ffct__Connection__c</referenceTo>
    <relationshipName>BundleJobs</relationshipName>
    <type>Lookup</type>
</CustomField>