force-app/main/default/objects/ffct__BundleJob__c/fields/ffct__SignupUsername__c.field-meta.xml
<CustomField>
    <fullName>ffct__SignupUsername__c</fullName>
    <label>Signup Username</label>
    <type>Email</type>
</CustomField>